--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ author:
   avatar: /assets/img/icon. # change with your own avatar
 
 # URL settings
-url: "https://klise.now.sh" #
-baseurl:
+url: "https://b0wd3n.github.io #
+baseurl: /webpage
 permalink: /:title/
 google_analytics: # leave it blank if not wish
 fb_appid:
